crates/context-macro/tests/constraints/invalid_seeds_syntax.fail.stderr
error: expected square brackets
  --> tests/constraints/invalid_seeds_syntax.fail.rs:24:17
   |
24 |         seeds = &[&args.admin],
   |                 ^
